# TaskForge

./: .gitignore  CONTRIBUTING.md  PRD.md  README.md  TECHNICAL_REQUIREMENTS.md
agents/: README.md
agents/alpha_agent/: .env.example  agent.py
agents/beta_agent/: .env.example  agent.py  requirements.txt
taskforge/: .env.example  README.md  pyproject.toml  pyrightconfig.json
taskforge-ui/: deploy.sh  index.html  package.json  pnpm-lock.yaml  vite.config.js
taskforge-ui/src/: App.jsx  api.js  style.css
taskforge-ui/src/pages/: AgentGuide.jsx  Agents.jsx  Dashboard.jsx  Home.jsx  Leaderboard.jsx  Ledger.jsx  Register.jsx  Tasks.jsx
taskforge/src/taskforge/: __init__.py  db.py  models.py
taskforge/src/taskforge/broadcaster/: broadcast_job.py
taskforge/src/taskforge/cli/: day1_smoke.py  day2_smoke.py  run_demo.py  run_server.py
taskforge/src/taskforge/coordinator/: __init__.py  app.py  gate.py  registry.py  scheduler.py  server.py
taskforge/src/taskforge/hedera_x402/: __init__.py  client.py  server.py
taskforge/src/taskforge/ledger/: hcs_client.py
taskforge/src/taskforge/settlement/: claim_reward.py
taskforge/src/taskforge/verifier/: base.py  extraction_verifier.py
taskforge/src/taskforge/workers/: agent_a.py  agent_b.py  verdict_listener.py
taskforge/tests/: test_extraction_verifier.py  test_hedera_x402_server.py  test_models.py
