[project]
name = "taskforge"
version = "0.1.0"
description = "Competitive agent task marketplace with Hedera HCS audit trail and x402 micropayment settlement"
readme = "README.md"
authors = [
    { name = "wiseman-umanah", email = "wisemanumanah@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "hiero-sdk-python>=0.2.8",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.51.0",
    "x402>=2.15.0",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = ".venv"
venv = ".venv"

[project.scripts]
taskforge = "taskforge:main"
taskforge-server = "taskforge.coordinator.app:app"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
